...

/* helps us avoid typos / inconsistencies between the test files and this file */
object TestTags {
  const val CREATION_SCREEN_IMAGE_BANNER_BOX = "Creation Screen Image Banner Box"
  const val CREATION_SCREEN_IMAGE_BANNER = "Creation Screen Image Banner"
  const val MAP_DELETE_ITINERARY_BUTTON = "Delete Itinerary Button"
  const val BOTTOM_NAV = "Bottom navigation bar"
  const val BOTTOM_NAV_OVERVIEW = "Bottom navigation bar overview button"
  const val BOTTOM_NAV_LIKED = "Bottom navigation bar liked button"
  const val BOTTOM_NAV_CREATION = "Bottom navigation bar creation button"
  const val BOTTOM_NAV_MAP = "Bottom navigation bar map button"
  const val BOTTOM_NAV_PROFILE = "Bottom navigation bar profile button"
  const val ITINERARY_CREATION_BAR_LOCATIONS = "Itinerary Creation Bar Locations"
  const val ITINERARY_CREATION_BAR_DESCRIPTION = "Itinerary Creation Bar Description"
  const val ITINERARY_CREATION_BAR_TAGS = "Itinerary Creation Bar Tags"
  const val ITINERARY_CREATION_BAR_PREVIEW = "Itinerary Creation Bar Preview"
  const val CREATION_PREVIEW_BANNER = "Creation Preview Banner"
  const val CREATION_PREVIEW_ITINERARY = "Creation Preview Itinerary"
  const val SEARCH_DROPDOWN = "Search Dropdown"
  const val OVERVIEW_SCREEN = "Overview Screen"
  const val LIKED_SCREEN = "Liked Screen"
  const val ITINERARY_LIST_SCROLLABLE = "Itinerary Scrollable List With Itineraries"
  const val ITINERARY_LIST_NULL = "Itinerary Scrollable List No Itineraries"
  const val ITINERARY_BANNER = "itinerary_banner"
  const val DUMMY_BANNER = "Dummy Banner"
  const val ITINERARY_BANNER_LIKE_BUTTON = "itinerary_banner_like_button"
  const val FILTER_PRICE_RANGE = "Filter Price Range"
...
  const val LOCATION_SEARCH_BAR = "Location Search Bar"
  const val LOCATION_SEARCH_RESULTS = "Location Search Results"
  const val LOCATION_SEARCH_NO_RESULTS = "Location Search No Results"
  const val CATEGORY_SELECTOR = "Category Selector"
  const val CATEGORY_SELECTOR_TAB = "Category Selector Tab"
  const val NEW_CREATION_SCREEN = "New Creation Screen"
  const val NO_NEW_CREATION_SCREEN = "No New Creation Screen"
  const val CREATION_SCREEN_LOCATIONS = "Creation Screen Choose Locations"
  const val ADD_LOCATION_BUTTON = "Add Location to Itinerary"
  const val RESTART_ITINERARY_BUTTON = "Restart Itinerary Location"
  const val CREATION_SCREEN_DESCRIPTION_TITLE = "Creation Screen Choose Title and Description"
  const val CREATION_SCREEN_TITLE = "Creation Screen Choose Title"
  const val CREATION_SCREEN_DESCRIPTION = "Creation Screen Choose Description"
...
  const val MAP_PROFILE_PIC = "profile_picture"
  const val MAP_CENTER_CAMERA_BUTTON = "center_camera_button"
  const val MAP_BANNER_BUTTON = "banner_button"
  const val MAP_ITINERARY_TITLE = "itinerary_title"
  const val MAP_ITINERARY_DESCRIPTION = "itinerary_description"
  const val MAP_USER_LOCATION = "user_location"
  const val MAP_NULL_ITINERARY = "null_location"
  const val PROFILE_SCREEN = "Profile Screen"
  const val FIRST_LOCATION = "First Location"
  const val SECOND_LOCATION = "Second Location"
  const val START_NEW_ITINERARY_STARTING = "start_new_itinerary_starting"
  const val START_NEW_ITINERARY = "start_new_itinerary"
  const val HINT_POPUP = "hint_popup"
  const val HINT_POPUP_MESSAGE = "hint_popup_message"
...
