...
  val maxSliderPrice =
      if (sliderPositionPriceState.value.endInclusive > MAX_SLIDER_PRICE) MAX_SLIDER_PRICE
      else sliderPositionPriceState.value.endInclusive

  val sliderPriceLocal = minSliderPrice..maxSliderPrice

  Text("How much do I want to spend ?")

  Column() {
    RangeSlider(
        value = sliderPriceLocal,
        onValueChange = { range ->
          if (range.endInclusive >= MAX_SLIDER_PRICE - 1E-2) {
            sliderPositionPriceState.value = range.start..MAX_PRICE
          } else {
            sliderPositionPriceState.value = range
...
